GMM_Main/src/objects/IPEDS__c.object
<CustomObject>
    <fields>
        <fullName>ACT_del__c</fullName>
        <label>ACT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_del__c</fullName>
        <label>ADDR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADMINURL_del__c</fullName>
        <label>ADMINURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APPLURL_del__c</fullName>
        <label>APPLURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ATHURL_del__c</fullName>
        <label>ATHURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CARNEGIE_del__c</fullName>
        <label>CARNEGIE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSATYPE__c</fullName>
        <label>CBSATYPE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCBASIC__c</fullName>
        <label>CCBASIC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCENRPRF__c</fullName>
        <label>CCENRPRF</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCIPGRAD__c</fullName>
        <label>CCIPGRAD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCIPUG__c</fullName>
        <label>CCIPUG</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCSIZSET__c</fullName>
        <label>CCSIZSET</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCUGPROF__c</fullName>
        <label>CCUGPROF</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHFNM__c</fullName>
        <label>CHFNM</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHFTITLE__c</fullName>
        <label>CHFTITLE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSEDAT__c</fullName>
        <label>CLOSEDAT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNGDSTCD__c</fullName>
        <label>CNGDSTCD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTROL__c</fullName>
        <label>CONTROL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTYCD__c</fullName>
        <label>COUNTYCD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTYNM__c</fullName>
        <label>COUNTYNM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSA__c</fullName>
        <label>CSA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYACTIVE__c</fullName>
        <label>CYACTIVE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEATHYR__c</fullName>
        <label>DEATHYR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEGGRANT__c</fullName>
        <label>DEGGRANT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFRCGID__c</fullName>
        <label>DFRCGID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFRCUSCG__c</fullName>
        <label>DFRCUSCG</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F1SYSCOD__c</fullName>
        <label>F1SYSCOD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F1SYSNAM__c</fullName>
        <label>F1SYSNAM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F1SYSTYP__c</fullName>
        <label>F1SYSTYP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAIDURL__c</fullName>
        <label>FAIDURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GENTELE__c</fullName>
        <label>GENTELE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROFFER__c</fullName>
        <label>GROFFER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HBCU__c</fullName>
        <label>HBCU</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDEGOFR1__c</fullName>
        <label>HDEGOFR1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLOFFER__c</fullName>
        <label>HLOFFER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOSPITAL__c</fullName>
        <label>HOSPITAL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IALIAS__c</fullName>
        <label>IALIAS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICLEVEL__c</fullName>
        <label>ICLEVEL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTCAT__c</fullName>
        <label>INSTCAT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTSIZE__c</fullName>
        <label>INSTSIZE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANDGRNT__c</fullName>
        <label>LANDGRNT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATITUDE__c</fullName>
        <label>LATITUDE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCALE__c</fullName>
        <label>LOCALE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LONGITUD__c</fullName>
        <label>LONGITUD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEDICAL__c</fullName>
        <label>MEDICAL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NECTA__c</fullName>
        <label>NECTA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEWID__c</fullName>
        <label>NEWID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPRICURL__c</fullName>
        <label>NPRICURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OBEREG__c</fullName>
        <label>OBEREG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEFLAG__c</fullName>
        <label>OPEFLAG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEID__c</fullName>
        <label>OPEID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPENPUBL__c</fullName>
        <label>OPENPUBL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSTSEC__c</fullName>
        <label>POSTSEC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSEFLAG__c</fullName>
        <label>PSEFLAG</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSET4FLG__c</fullName>
        <label>PSET4FLG</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPTMTH__c</fullName>
        <label>RPTMTH</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECTOR__c</fullName>
        <label>SECTOR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STABBR__c</fullName>
        <label>STABBR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIBAL__c</fullName>
        <label>TRIBAL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UGOFFER__c</fullName>
        <label>UGOFFER</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITID__c</fullName>
        <label>UNITID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VETURL__c</fullName>
        <label>VETURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WEBADDR__c</fullName>
        <label>WEBADDR</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>IPED</label>
    <nameField>
        <label>INSTNM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPEDS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>